원티드 프리온보딩 코스

--- a/원티드_프리온보딩_코스_사전과제.ipynb
+++ b/원티드_프리온보딩_코스_사전과제.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "원티드_프리온보딩_코스_사전과제.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN5waFUx19D29CFpSydO/Mq",
+      "authorship_tag": "ABX9TyMf+DgNe+938Ak0/j3tjq2M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/SukyC/wanted_pre_onboarding/blob/main/%EC%9B%90%ED%8B%B0%EB%93%9C_%ED%94%84%EB%A6%AC%EC%98%A8%EB%B3%B4%EB%94%A9_%EC%BD%94%EC%8A%A4_%EC%82%AC%EC%A0%84%EA%B3%BC%EC%A0%9C.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "axW814AGEUoR"
+      }
     },
     {
       "cell_type": "markdown",
@@ -90,6 +99,17 @@
     {
       "cell_type": "code",
       "source": [
+        "import re"
+      ],
+      "metadata": {
+        "id": "2LQYLJ5aaI_G"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "class Tokenizer():\n",
         "  def __init__(self):\n",
         "    self.word_dict = {'oov': 0}\n",
@@ -100,6 +120,9 @@
         "    '''\n",
         "    문제 1-1.\n",
         "    '''\n",
+        "    for i in sequences:\n",
+        "      i=re.sub('[-=+,#/\\?:^$.@*\\\"※~&%ㆍ!』‘\\\\|\\(\\)\\[\\]`\\'…》\\”\\“\\’·]', '', i).lower().split(\" \")\n",
+        "      result.append(i)\n",
         "    return result\n",
         "  \n",
         "  def fit(self, sequences):\n",
@@ -128,7 +151,7 @@
       "metadata": {
         "id": "FkKnDad8Y6u9"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
