원티드 프리온보딩 코스

--- a/원티드_프리온보딩_코스_사전과제.ipynb
+++ b/원티드_프리온보딩_코스_사전과제.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "원티드_프리온보딩_코스_사전과제.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMf+DgNe+938Ak0/j3tjq2M",
+      "authorship_tag": "ABX9TyMTT56g+BOfBgCSvj/Lt+05",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -130,6 +130,15 @@
         "    '''\n",
         "    문제 1-2.\n",
         "    '''\n",
+        "    tokens = self.preprocessing(sequences)\n",
+        "\n",
+        "    idx=1 \n",
+        "    for token in tokens:\n",
+        "      for word in token:\n",
+        "        if word not in self.word_dict:\n",
+        "          self.word_dict[word] = idx\n",
+        "          idx+=1\n",
+        "\n",
         "    self.fit_checker = True\n",
         "  \n",
         "  def transform(self, sequences):\n",
